--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,9 @@
 		<activity android:name=".MainActivity"
 			android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation"
 			android:windowSoftInputMode="stateVisible|adjustPan" />
-
+        <activity android:name=".TransactionTabActivity"
+            android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+		
     </application>
 
 </manifest>
