--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".TransactionTabActivity"
             android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
         <activity android:name=".NavExpenseActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+        <activity android:name=".Keypad" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
         		
     </application>
 
