--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,9 +24,8 @@
 		<activity android:name=".MainActivity"
 			android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation"
 			android:windowSoftInputMode="stateVisible|adjustPan" />
-        <activity android:name=".TransactionTabActivity"
-            android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-        <activity android:name=".NavExpenseActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+        <activity android:name=".TransactionTabActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+        <activity android:name=".TransactionNavActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
         <activity android:name=".Keypad" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
         		
     </application>
