--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".TransactionNavActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
         <activity android:name=".Keypad" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
 		<activity android:name=".AccountActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
-        		
+        <activity android:name=".AccountEditorActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
     </application>
 
 </manifest>
