--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Keypad" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
 		<activity android:name=".AccountActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
         <activity android:name=".AccountEditorActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
+		<activity android:name=".BudgetActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation" />
     </application>
 
 </manifest>
